# ProyectoGrafica

./: CMakeLists.txt  README.md  functions.cpp  functions.h  globals.cpp  globals.h  main.cpp  object.cpp  object.h  planet.cpp  planet.h  spaceship.cpp  spaceship.h
